# py-ia-rom-logger

./: .envrc  .gitignore  .vscode  CHANGELOG.md  LICENSE  README.md  activate_env.sh  pyproject.toml  scripts
configs/: .gitignore
docs/: LICENSE  README.md
scripts/: __init__.py  __main__.py
scripts/commands/: __init__.py  clean_cache.py  run_with_env.py
scripts/commands/examples/: basic_usage.py
scripts/examples/: basic_usage.py
src/py_ia_rom_logger/: __init__.py
src/py_ia_rom_logger/config/: __init__.py  config.py  decorators.py
src/py_ia_rom_logger/handlers/: __init__.py  console_handler.py  file_handler.py
src/py_ia_rom_logger/helpers/: system_info_helper.py
src/py_ia_rom_logger/helpers/formatters/: __init__.py  _abstract_console_formatter.py  console_rich_formatter.py  file_json_formatter.py
src/py_ia_rom_logger/helpers/formatters/tracebacks/: compact_traceback_formatter.py  console_rich_traceback_formatter.py
src/py_ia_rom_logger/models/: __init__.py  _log_model.py  console_log_model.py  file_log_model.py
src/py_ia_rom_logger/services/: __init__.py  file_manager_service.py  logging_manager_service.py
tests/: conftest.py
tests/test_config/: test_config.py  test_decorators.py
tests/test_handlers/: test_file_handler.py
tests/test_helpers/: test_file_json_formatter.py  test_system_info_helper.py
tests/test_integration/: __init__.py  test_e2e.py
tests/test_models/: test_console_log_model.py  test_file_log_model.py  test_log_model.py
tests/test_services/: test_file_manager.py  test_logging_manager.py
